--- a/main.scss
+++ b/main.scss
@@ -25,15 +25,18 @@ body {
 	&_gameboard {
 		display: flex;
 		flex-direction: column;
-
+		background-image: url(https://images.squarespace-cdn.com/content/v1/551a19f8e4b0e8322a93850a/1566852559261-T73HBDFMAXQT6YCZ2XYF/ke17ZwdGBToddI8pDm48kCK3ShiwawGuxABpoKgwloNZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpwh_dMjekDz6LTnUxUQCaAGw31Rdx3PRAMZZRXtwzShsDzRNyEwWtnG1Lw7-qrH-cQ/Grass_Sample.png);
+		background-repeat: repeat;
 		&_cellrow {
 			display: flex;
 			flex-direction: row;
 
 			&_cell {
-				border: 2px solid black;
 				height: 60px;
 				width: 60px;
+				font-size: 30px;
+				text-align: center;
+				justify-content: center;
 			}
 		}
 	}
