--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,12 @@ body {
   height: 80px;
   width: 100vw;
   background-color: cadetblue;
+  display: flex;
+  justify-content: center;
+}
+.navbar_hp, .navbar_score, .navbar_level {
+  display: flex;
+  margin: 20px;
 }
 
 .main {
