--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,15 @@ body {
 	height: 80px;
 	width: 100vw;
 	background-color: cadetblue;
+	display: flex;
+	justify-content: center;
+
+	&_hp,
+	&_score,
+	&_level {
+		display: flex;
+		margin: 20px;
+	}
 }
 
 .main {
